General layout complete for Celtic Cross. Need to work on alignment issues.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,10 +43,11 @@ legend {
   }
 
   .banner {
-  margin-top: 4em;
+  margin-top: 1em;
   border-bottom: 1px solid #7a46a8;
   margin-bottom: 1.5em;
   padding-bottom: 0.5em;
+    padding-left: 1em;
   }
 
   .review-header {
@@ -109,7 +110,35 @@ body {
 
 .negative-card{
   transform: rotate(180deg);
+  width: 50%;
+  height: auto;
 }
 
-.negative-card{
+.positive-card{
+  width: 50%;
+  height: auto;
+}
+
+.card-three{
+  float: left;
+}
+
+.last-four{
+  float: right;
+}
+
+.full-bg{
+  background-color: #ab75e5;
+}
+
+.card-two-negative{
+  transform: rotate(90deg);
+  width: 50%;
+  height: auto;
+}
+
+.card-two-positive{
+  transform: rotate(-90deg);
+  width: 50%;
+  height: auto;
 }
